--- a/src/options/index.sass
+++ b/src/options/index.sass
@@ -2,3 +2,18 @@
     width: 100%
     height: 100%
     position: relative
+
+#no-login-panel-box
+    min-height: 300px
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    .label
+        max-width: 400px
+    .github-oauth-btn 
+        width: 250px !important
+        display: flex !important
+        justify-content: center
+                    
