--- a/src/options/index.sass
+++ b/src/options/index.sass
@@ -21,6 +21,7 @@
     width: 95%
     height: 95%
     margin: auto
+    overflow: auto
     .tab-grid
         width: 100%
         max-height: 100%
