--- a/src/options/index.sass
+++ b/src/options/index.sass
@@ -28,8 +28,20 @@
         .ui.attached
             border-top: 1px solid rgba(34,36,38,.15)
 
+#__global-msg-box
+    position: absolute
+    right: .5em
+    bottom: 0
+    .__global-msg-item
+        margin-bottom: .5em
+
 @media screen and (min-width: 1080px)
     #main
         .tab-grid
             .ui.grid > .tabular > .ui.label
                 display: none
+
+.mock-record-editor
+    max-height: 70vh
+    overflow-x: hidden
+    overflow-y: auto
