--- a/src/options/index.sass
+++ b/src/options/index.sass
@@ -2,6 +2,27 @@
     width: 100%
     height: 100%
     position: relative
+    .tab-grid
+        overflow: hidden
+        padding-top: 2%
+        height: 100%
+        & > .ui
+            justify-content: center
+            width: 100%
+            height: 96%
+            .column
+                max-height: 100%
+                overflow-y: auto
+        // A very hack way to fix header, but padding will expose scroll content.
+        // .ui.table thead tr:first-child > th
+        //     position: sticky !important
+        //     top: 0
+        //     z-index: 2
+    .config-form
+        .checkbox
+            display: block
+        .checkbox + .checkbox
+            margin-top: 1rem
 
 #no-login-panel-box
     min-height: 300px
@@ -28,6 +49,8 @@
         .ui.attached
             border-top: 1px solid rgba(34,36,38,.15)
 
+
+
 #__global-msg-box
     position: absolute
     right: .5em
@@ -36,13 +59,13 @@
     .__global-msg-item
         margin-bottom: .5em
 
+.mock-record-editor
+    max-height: 70vh
+    overflow-x: hidden
+    overflow-y: auto
+
 @media screen and (min-width: 1080px)
     #main
         .tab-grid
             .ui.grid > .tabular > .ui.label
                 display: none
-
-.mock-record-editor
-    max-height: 70vh
-    overflow-x: hidden
-    overflow-y: auto
