fix: fix style & data empty when record update.

--- a/src/options/index.sass
+++ b/src/options/index.sass
@@ -67,5 +67,5 @@
 @media screen and (min-width: 1080px)
     #main
         .tab-grid
-            .ui.grid > .tabular > .ui.label
+            .ui.grid > .column > .tabular > .item > .ui.label
                 display: none
